--- a/templates/inventory/base.html
+++ b/templates/inventory/base.html
@@ -6,9 +6,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>
       {% block title %}
-        Inventory Management
+        Stocky
       {% endblock %}
     </title>
 
@@ -22,11 +23,16 @@
     {% if request.user.is_authenticated %}
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'inventory' %}">{{ request.user.company.company_name }}</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <a class="navbar-brand" href="{% url 'inventory' %}?refresh=True">{{ request.user.company.company_name }}</a>
+          <form class="d-flex" role="search" action="" method="get">
+            <input class="form-control me-2" type="search" name="qu" placeholder="Ex.Stamford Hill" aria-label="Search" value="{{ request.GET.qu }}" />
 
+            <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto align-items-center">
+              <!-- Replace <search></search> with this: -->
               <!-- User Info -->
               <li class="nav-item">
                 <a class="nav-link fw-bold text-light" href="{% url 'update_user' request.user.id %}">
@@ -41,7 +47,6 @@
                   {% endif %}
                 </a>
               </li>
-
               <!-- Company Info -->
 
               <li class="nav-item">
