--- a/templates/inventory/warehouse.html
+++ b/templates/inventory/warehouse.html
@@ -52,6 +52,7 @@
                     <th>Part Number</th>
                     <th>Price</th>
                     <th>Quantity</th>
+                    <th>Origin</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -63,6 +64,10 @@
                       <td>{{ item.part_number }}</td>
                       <td>${{ item.price }}</td>
                       <td>{{ item.warehouse_quantity }}</td>
+                      {% if item.is_moved_from_job %}<td>Was moved from: <a href="{% url "update_job" item.is_moved_from_job.job_id %}">{{item.is_moved_from_job}}</a></td>{% else %}
+                      <td>Originally from warehouse</td>
+                      {% endif %}
+                      
                     </tr>
                   {% endfor %}
                 </tbody>
@@ -76,7 +81,7 @@
 
       <!-- 2. Taken Warehouse Items -->
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingUsed"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUsed" aria-expanded="false" aria-controls="collapseUsed">🚚 Used Warehouse Items  
+        <h2 class="accordion-header" id="headingUsed"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUsed" aria-expanded="false" aria-controls="collapseUsed">🏴 Used Warehouse Items  
 <span style="
         display: inline-block;
         padding: 1px 1px;
@@ -102,22 +107,31 @@
                     <th>Price</th>
                     <th>Arrived Qty</th>
                     <th>Moved</th>
-                    <th>Job</th>
+                  
+                    <th>Origin</th>
                   </tr>
                 </thead>
                 <tbody>
                   {% for item in used_warehouse_items %}
                     <tr>
                       <td>
-                        <a href="{% url 'update_warehouse_item' item.id %}">{{ item.item.name }}</a>
+                        <a href="{% url 'update_warehouse_item' item.id %}">{{ item.name }}</a>
                       </td>
                       <td>{{ item.part_number }}</td>
                       <td>${{ item.price }}</td>
                       <td>{{ item.arrived_quantity }}</td>
                       <td>{{ item.warehouse_quantity }}</td>
-                      <td>
-                        <a href="{% url 'update_job' item.job.job_id %}">{{ item.job }}</a>
-                      </td>
+                      {% if item.was_for_job %}
+                      <td>Was moved from: 
+                        <a href="{% url "update_job" item.was_for_job.job_id %}">
+                        {{item.was_for_job}}
+                      </a>
+                    </td>
+                      {% else %}
+                      <td>Originally from warehouse</td>
+                      {% endif %}
+
+                   
                     </tr>
                   {% endfor %}
                 </tbody>
@@ -131,102 +145,64 @@
 
       <!-- 3. Moved Items -->
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingMoved"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMoved" aria-expanded="false" aria-controls="collapseMoved">🔄 Items Moved to Warehouse After Job        <span style="
+        <h2 class="accordion-header" id="headingMoved"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMoved" aria-expanded="false" aria-controls="collapseMoved">🚚 Items linked to jobs       <span style="
         display: inline-block;
         padding: 1px 1px;
         font-size:13px;
         margin-left: 3px;
         font-weight: normal;
         color: #ffffffff;
-        background-color: rgba(49, 122, 0, 1);
+        background-color: rgba(41, 102, 117, 1);
         border: 1px solid #ddd;
         border-radius: 5px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      "> Following items are available<span ></button></h2>
+      "> Following items are linked with jobs<span ></button></h2>
         <div id="collapseMoved" class="accordion-collapse collapse" aria-labelledby="headingMoved" data-bs-parent="#warehouseAccordion">
           <div class="accordion-body">
-            {% if moved_items %}
+            {% if taken_warehouse_items %}
               <table class="table table-striped table-sm align-middle">
                 <thead>
                   <tr>
                     <th>Name</th>
                     <th>Part Number</th>
                     <th>Price</th>
-                    <th>Quantity Moved</th>
+                    <th>Quantity</th>
+                    <th>Job</th>
+                    <th>Origin</th>
+
                   </tr>
                 </thead>
                 <tbody>
-                  {% for item in moved_items %}
+                  {% for item in taken_warehouse_items %}
                     <tr>
                       <td>
                         <a href="{% url 'update_warehouse_item' item.id %}">{{ item.name }}</a>
                       </td>
                       <td>{{ item.part_number }}</td>
                       <td>${{ item.price }}</td>
-                      <td>{{ item.warehouse_quantity }}</td>
+                      <td>{{ item.job_quantity }}</td>
+                      <td>{{item.job}}</td>
+                        {% if item.was_for_job %}
+                      <td>Was moved from: 
+                        <a href="{% url "update_job" item.was_for_job.job_id %}">
+                        {{item.was_for_job}}
+                      </a>
+                    </td>
+                      {% else %}
+                      <td>Originally from warehouse</td>
+                      {% endif %}
                     </tr>
                   {% endfor %}
                 </tbody>
               </table>
             {% else %}
-              <p class="text-muted">No items have been moved for jobs.</p>
+              <p class="text-muted">No items linked with jobs.</p>
             {% endif %}
           </div>
         </div>
       </div>
 
       <!-- 4. Taken Moved Items -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingUsedMoved"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUsedMoved" aria-expanded="false" aria-controls="collapseUsedMoved">🔁 Used Moved Items
-
-          <span style="
-        display: inline-block;
-        padding: 1px 1px;
-        font-size:13px;
-        margin-left: 3px;
-        font-weight: normal;
-        color: #ffffffff;
-        background-color: rgba(206, 0, 0, 1);
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      "> Following items are used<span >
-        </button></h2>
-        <div id="collapseUsedMoved" class="accordion-collapse collapse" aria-labelledby="headingUsedMoved" data-bs-parent="#warehouseAccordion">
-          <div class="accordion-body">
-            <table class="table table-striped table-sm align-middle">
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Part Number</th>
-                  <th>Price</th>
-                  <th>Quantity Moved</th>
-                  <th>Taken For Job</th>
-                  <th>Originally For</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for item in used_moved_items %}
-                  <tr>
-                    <td>
-                      <a href="{% url 'update_warehouse_item' item.id %}">{{ item.name }}</a>
-                    </td>
-                    <td>{{ item.part_number }}</td>
-                    <td>${{ item.price }}</td>
-                    <td>{{ item.quantity_moved }}</td>
-                    <td>
-                      <a href="{% url 'update_job' item.job.job_id %}">{{ item.job }}</a>
-                    </td>
-                    <td>
-                      <a href="{% url 'update_job' item.was_for_job.job_id %}">{{ item.was_for_job.address }}</a>
-                    </td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
     </div> <!-- /accordion -->
   </div> <!-- /container -->
 {% endblock %}
