--- a/templates/inventory/admin_panel.html
+++ b/templates/inventory/admin_panel.html
@@ -15,6 +15,7 @@
         <a href="{% url 'history' %}" class="btn btn-outline-primary px-4 me-3">History</a>
         <a href="{% url 'add_eng' %}" class="btn btn-outline-primary px-4 me-3">Add Engineer</a>
         <a href="{% url 'register' %}" class="btn btn-outline-primary px-4 me-3">Add User</a>
+        <a href="{% url 'add_category' %}" class="btn btn-outline-primary px-4 me-3">Add category</a>
       </div>
     </nav>
     <div class="row">
