--- a/templates/inventory/warehouse.html
+++ b/templates/inventory/warehouse.html
@@ -18,16 +18,24 @@
             <option value="normal_entry" {% if entry_method == "normal_entry" %}selected{% endif %}>Normal method</option>
     
         </select> 
+        <label for="items_status" class="form-label">Filter by entry method:</label>
+        <select name="items_status" onchange="this.form.submit()" class="form-select w-auto d-inline">
+            <option value="available" {% if not items_status or items_status == 'available' %}selected{% endif %}>Available parts</option>
+            
+            <option value="used" {% if items_status == "used"  %}selected{% endif %}>Used parts from warehouse</option>
+            <option value="linked" {% if items_status == "linked" %}selected{% endif %}>Linked to a job</option>
+    
+        </select>
 
     </form>
     <a class="" href="{% url 'add_warehouseitem' %}">Add warehouse item</a>
 
     <a class="" href="{% url 'batch_entry' %}">Bulk Add (Excel file)</a>
-
+{% if items_status == "available" %}
     <div class="accordion" id="warehouseAccordion">
       <!-- 1. Warehouse Items -->
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingWarehouse"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWarehouse" aria-expanded="true" aria-controls="collapseWarehouse">📦 Warehouse Items
+        <h2 class="accordion-header" id="headingWarehouse">📦 Warehouse Items
 
           <span style="
         display: inline-block;
@@ -41,8 +49,8 @@
         border-radius: 5px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       "> Following items are available<span >
-        </button></h2>
-        <div id="collapseWarehouse" class="accordion-collapse collapse show" aria-labelledby="headingWarehouse" data-bs-parent="#warehouseAccordion">
+        </h2>
+        <div >
           <div class="accordion-body">
             {% if warehouse_items %}
               <table class="table table-striped table-sm align-middle">
@@ -78,10 +86,11 @@
           </div>
         </div>
       </div>
-
+{% endif %}
       <!-- 2. Taken Warehouse Items -->
+       {% if items_status == "used" %}
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingUsed"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUsed" aria-expanded="false" aria-controls="collapseUsed">🏴 Used Warehouse Items  
+        <h2 class="accordion-header" id="headingUsed">🏴 Used Warehouse Items  
 <span style="
         display: inline-block;
         padding: 1px 1px;
@@ -95,8 +104,8 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       "> Following items are used<span >
 
-        </button></h2>
-        <div id="collapseUsed" class="accordion-collapse collapse" aria-labelledby="headingUsed" data-bs-parent="#warehouseAccordion">
+       </h2>
+        <div >
           <div class="accordion-body">
             {% if used_warehouse_items %}
               <table class="table table-striped table-sm align-middle">
@@ -105,9 +114,9 @@
                     <th>Name</th>
                     <th>Part Number</th>
                     <th>Price</th>
-                    <th>Arrived Qty</th>
+                    <th>Qty</th>
                     <th>Moved</th>
-                  
+                  <th>Job</th>
                     <th>Origin</th>
                   </tr>
                 </thead>
@@ -119,8 +128,12 @@
                       </td>
                       <td>{{ item.part_number }}</td>
                       <td>${{ item.price }}</td>
+
                       <td>{{ item.arrived_quantity }}</td>
+
                       <td>{{ item.warehouse_quantity }}</td>
+                      <td><a href={% url "update_job" item.job.job_id %}>{{ item.job }}</a></td>
+
                       {% if item.was_for_job %}
                       <td>Was moved from: 
                         <a href="{% url "update_job" item.was_for_job.job_id %}">
@@ -142,10 +155,11 @@
           </div>
         </div>
       </div>
-
+{% endif %}
       <!-- 3. Moved Items -->
+       {% if items_status == "linked" %}
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingMoved"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMoved" aria-expanded="false" aria-controls="collapseMoved">🚚 Items linked to jobs       <span style="
+        <h2 class="accordion-header" id="headingMoved">🚚 Items linked to jobs       <span style="
         display: inline-block;
         padding: 1px 1px;
         font-size:13px;
@@ -156,8 +170,9 @@
         border: 1px solid #ddd;
         border-radius: 5px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      "> Following items are linked with jobs<span ></button></h2>
-        <div id="collapseMoved" class="accordion-collapse collapse" aria-labelledby="headingMoved" data-bs-parent="#warehouseAccordion">
+      "> Following items are linked with jobs
+      <span ></h2>
+        <div  >
           <div class="accordion-body">
             {% if taken_warehouse_items %}
               <table class="table table-striped table-sm align-middle">
@@ -181,7 +196,7 @@
                       <td>{{ item.part_number }}</td>
                       <td>${{ item.price }}</td>
                       <td>{{ item.job_quantity }}</td>
-                      <td>{{item.job}}</td>
+                      <td><a href={% url "update_job" item.job.job_id %}>{{ item.job }}</a></td>
                         {% if item.was_for_job %}
                       <td>Was moved from: 
                         <a href="{% url "update_job" item.was_for_job.job_id %}">
@@ -201,7 +216,7 @@
           </div>
         </div>
       </div>
-
+{% endif %}
       <!-- 4. Taken Moved Items -->
     </div> <!-- /accordion -->
   </div> <!-- /container -->
