--- a/templates/inventory/base.html
+++ b/templates/inventory/base.html
@@ -66,7 +66,7 @@
       </nav>
     {% endif %}
 
-    <div class="container content">
+    <div class="mg-1-4 p-4">
       {% block body %}
 
       {% endblock %}
