--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -21,7 +21,7 @@
       <option value="cancelled" {% if status == 'cancelled' %}selected{% endif %}>Cancelled</option>
       <option value="completed" {% if status == 'completed' %}selected{% endif %}>Completed</option>
       <option value="quoted" {% if status == 'quoted' %}selected{% endif %}>Quoted</option>
-      <option value="on_hold" {% if status == 'on_hold' %}selected{% endif %}>On hold</option>
+      <option value="on_hold" {% if status == 'on_hold' %}selected{% endif %}>On hold✋</option>
 
     </select>
   </div>
