--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -158,7 +158,7 @@ altFormat: 'F j, Y'
   </h2>
 
   <div class="job-info">
-{% if job.birthday|days_float < 7 %}
+{% if job.retirement_date > now_time %}
 <span style="
     display: inline-block;
     color: #fff;
@@ -170,11 +170,10 @@ altFormat: 'F j, Y'
     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     margin-bottom: 5px;
 ">
-    🆕 New Job • Age: {{ job.birthday|timesince }}
+    🆕 New Job • Age: {{ job.birthday|timesince }}{{job.birthday}}
 </span>
 {% endif %}
-
-{% if job.birthday|days_float >= 7 %}
+{% if job.retirement_date < now_time %}
 <span style="
     display: inline-block;
     color: #ffe600;
@@ -186,7 +185,7 @@ altFormat: 'F j, Y'
     box-shadow: 0 2px 6px rgba(0,0,0,0.25);
      margin-bottom: 5px;
 ">
-    ⚠️ Old Job • Age: {{ job.birthday|timesince }}
+    ⚠️ Old Job • Age: {{ job.birthday|timesince }} - {{job.birthday}}
 </span>
 {% endif %}
 
