--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -4,6 +4,7 @@
 
 {% block title %}Inventory - Stocky{% endblock %}
 {% block body %}
+<p>HAHAHA</p>
 {% if messages %}
 {% for message in messages %}
 <div class="alert alert-{{ message.tags }}">{{ message }}</div>
